--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <activity android:name="cc.jianke.pluginmodule.ProxyActivity"/>
-        <activity android:name=".SecondActivity"/>
+        <activity android:name=".SecondViewBindingMvvmActivity"/>
         <activity android:name=".TestDataBindActivity"/>
     </application>
 
