--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.blankj:utilcode:1.30.6'
     implementation project(":pluginModule")
     implementation project(":mvvmModule")
+    implementation project(":wanAndroid")
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.github.liujingxing.rxhttp:rxhttp:2.8.5'
@@ -70,5 +71,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'com.github.DylanCaiCoding.ViewBindingKTX:viewbinding-base:2.0.3'
+
+    implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
+    implementation 'io.github.youth5201314:banner:2.2.2'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
+    implementation  'io.github.scwang90:refresh-layout-kernel:2.0.5'
+    implementation  'io.github.scwang90:refresh-header-classics:2.0.5'
+    implementation  'io.github.scwang90:refresh-footer-classics:2.0.5'
 
 }
