--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,9 +76,9 @@ dependencies {
     implementation 'io.github.youth5201314:banner:2.2.2'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
-    implementation  'io.github.scwang90:refresh-layout-kernel:2.0.5'
-    implementation  'io.github.scwang90:refresh-header-classics:2.0.5'
-    implementation  'io.github.scwang90:refresh-footer-classics:2.0.5'
-
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+    implementation 'io.github.scwang90:refresh-layout-kernel:2.0.5'
+    implementation 'io.github.scwang90:refresh-header-classics:2.0.5'
+    implementation 'io.github.scwang90:refresh-footer-classics:2.0.5'
+    implementation 'com.github.li-xiaojun:XPopup:2.7.6'
 }
