1. 完善WanAndroid api 案例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".wanandroid.activity.LoginActivity"/>
         <activity android:name=".wanandroid.activity.CoinActivity"/>
         <activity android:name=".wanandroid.activity.CollectActivity"/>
+        <activity android:name=".wanandroid.activity.KnowledgeDetailActivity"/>
     </application>
 
 </manifest>
